common/networkpolicies/base/default-allow-same-namespace-knative-serving.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-knative-serving
  namespace: knative-serving
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
