common/networkpolicies/base/default-allow-same-namespace-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-oauth2-proxy
  namespace: oauth2-proxy
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
