common/networkpolicies/base/jobset-webhook-kubeflow-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jobset-webhook
  namespace: kubeflow-system
spec:
  podSelector:
    matchLabels:
      service.istio.io/canonical-name: jobset-controller-manager
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 9443
